--- a/package.json
+++ b/package.json
@@ -1,5 +1,35 @@
 {
+  "name": "eth-block-updater",
+  "description": "",
+  "version": "1.0.0",
+  "scripts": {
+    "compile": "cross-env TS_NODE_TRANSPILE_ONLY=true hardhat compile",
+    "clean": "rm -rf ./artifacts ./cache ./coverage ./build ./coverage.json",
+    "test": "hardhat test",
+    "deploy:bsc": "hardhat deploy:contract --network bsc_test",
+    "deploy:eth": "hardhat deploy:contract --network eth_rinkeby"
+  },
+  "license": "ISC",
+  "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.6",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
+    "@typechain/ethers-v5": "^10.0.0",
+    "@typechain/hardhat": "^6.0.0",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^17.0.41",
+    "chai": "^4.3.6",
+    "ethereum-waffle": "^3.4.4",
+    "ethers": "^5.6.8",
+    "hardhat": "^2.9.7",
+    "ts-generator": "^0.1.1",
+    "ts-node": "^10.8.1",
+    "typechain": "^8.0.0",
+    "typescript": "^4.7.3",
+    "web3": "^1.7.3",
+    "cross-env": "^7.0.3"
+  },
   "dependencies": {
-    "truffle": "^5.5.18"
+    "@openzeppelin/contracts": "^4.5.0"
   }
 }
